--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                       <div class="intro__number">
                    <label for="intro__number">*</label>
                   
-                   <input type="text" placeholder="Мобильный телефон" id="intro__number" required />
+                   <input type="telephone" placeholder="Мобильный телефон" id="intro__number" required />
             </div>
                <input type="submit" id="submit" value="Перезвоните мне"/>
            </form>
