--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </div>
             <form action="#" method="GET" class="form__input--name">       
           <input type="text" id="form__input--name" placeholder="ИМЯ*" required>
-        <input type="text" id="form__input--number" placeholder="МОБИЛЬНЫЙ ТЕЛЕФОН*" required >
+        <input type="telephone" id="form__input--number" placeholder="МОБИЛЬНЫЙ ТЕЛЕФОН*" required >
       <input type="submit" id="form__input--submit" value="ПЕРЕЗВОНИТЕ МНЕ">
         </form>
         </div>
